# Conformal-Prediction-Uncertainty-Aware-Medical-AI

./: .env.example  .flake8  .gitattributes  .gitignore  .secrets.baseline  MODEL_CARD.md  Makefile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
config/: config.yaml
data/processed/: cal.csv  cal.csv.dvc  test.csv.dvc  train.csv.dvc
data/raw/: heart.csv.sha256
hf_space/: README.md  app.py  requirements.txt
models/: meta.joblib  scaler.joblib  scc.joblib  training_stats.json  xgb.joblib
notebooks/: EDA.ipynb
reports/: results.json
research-notes/: 01-conformal-prediction-foundations.md  02-mapie-library-design.md  03-decision-curve-analysis.md  04-design-rationale.md  05-eu-ai-act-medical-ai.md  README.md
scripts/: block_dangerous.ps1  prepare_data.py  run_eda.py
src/: __init__.py  config.py  exceptions.py  logger.py
src/api/: __init__.py  app.py  coverage_monitor.py  gradio_demo.py  nl_translator.py  streamlit_glass.css  theme.py
src/baseline/: __init__.py  baseline.py
src/data/: __init__.py  dataset.py  preprocessing.py  schemas.py  skew_check.py  validation.py
src/evaluation/: __init__.py  coverage.py  dca.py  ece.py  evaluate.py  method_compare.py  mondrian.py  (+1 more)
tests/: __init__.py  test_baseline.py  test_calibration_no_leakage.py  test_coverage_regression.py  test_dataset.py  test_docs.py  test_evaluation.py  test_integration.py  test_model.py  test_placeholder.py  test_preprocessing.py  test_streamlit.py  test_training.py
(+5 files in other folders)
