[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conformal-prediction-uncertainty-aware-medical-ai"
version = "0.1.0"
description = "Conformal Prediction · Uncertainty-Aware Medical AI"
authors = [{name = "Priyrajsinh Parmar", email = "priyrajsinh03@gmail.com"}]
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
strict_optional = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
filterwarnings = ["error::DeprecationWarning"]
asyncio_mode = "auto"

[tool.interrogate]
fail-under = 80
verbose = 1

[tool.coverage.run]
source = ["src"]
